# browscap-rs

./: .gitignore  Cargo.toml  LICENSE  README.MD
src/: brows_cap_field.rs  capabilities.rs  error.rs  file_parser.rs  filter.rs  lib.rs  literal.rs  mapper.rs  rule.rs  searchable_string.rs  user_agent_parser.rs
tests/: bitvec_test.rs  contains.rs  file_batch_ua_test.rs  single_ua_test.rs  threads_test.rs
