[package]
name = "browscap-rs"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of browscap, ported from browscap-java"
authors = ["付丹琪 <danielfu@live.com>"]
license = "MIT"
repository = "https://github.com/yourusername/browscap-rs"
documentation = "https://docs.rs/browscap-rs"
readme = "README.md"
keywords = ["browscap", "user-agent", "parser", "browser-detection"]
categories = ["web-programming", "parser-implementations"]


[dependencies]
csv = "1.3.1"
thiserror = "2.0.16"
bitvec = "1.0.1"
regex = "1.11.3"
log = "0.4.28"
env_logger = "0.9.1"
ustr = "1.1.0"
dashmap = "6.1.0"
hashbrown = "0.16.0"

[dev-dependencies]
base64 = "0.22.1"